--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 }
 .resize-grid{
     text-align: center;
-    margin: 50px 0px 30px 0px;
+    margin: 50px 0px 30px 0px;    
 }
 .resize-grid label {
     font-size: 16px;
@@ -41,4 +41,13 @@
 }
 .paint{
     background-color: pink;
+}
+
+input#on, input#off{
+    margin: 0 -15px 0 -10px;
+    vertical-align: middle;
+}
+
+#radio-text{
+    margin-left: 10px;
 }
